--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -102,7 +102,7 @@
                           <li><a href="#" class="link-dark rounded" [routerLink]="'/client/meeting/detail'">Booked Slots</a></li>
                           <li><a href="#" class="link-dark rounded" [routerLink]="'/client/enquiry/detail'">Enquiries</a></li>
                           <li><a href="#" class="link-dark rounded" [routerLink]="'/client/product/list'">Products</a></li>
-
+                          <li><a href="#" class="link-dark rounded" [routerLink]="'/client/orders/history'">Orders</a></li>
                       </ul>
                   </div>
               </li>
