--- a/src/app/client-sub-system/add-client/add-client.component.html
+++ b/src/app/client-sub-system/add-client/add-client.component.html
@@ -1,6 +1,9 @@
-<div class="card">
+<div class="card mt-5" >
   <div class="card-header text-center">
     <h3>Add Client</h3>
+    <span style="float: right;">
+      <h3><countdown #cd [config]="config" (event)="handleEvent($event)"></countdown></h3>
+    </span>
   </div>
   <div class="card-body">
 
