--- a/src/app/report-sub-system/attendance-report/attendance-report.component.html
+++ b/src/app/report-sub-system/attendance-report/attendance-report.component.html
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card" id="report">
     <div  class="card-header text-center">
       <h3>Teams Detail</h3>
     </div>
@@ -20,7 +20,7 @@
           </div>
         <div class="col-8">
             
-            <div class="card">
+            <div class="card"  >
                 <div class="card-body">
                   <div class="row">
                     <table class="table">
