--- a/src/app/report-sub-system/monthly-stock-report/monthly-stock-report.component.html
+++ b/src/app/report-sub-system/monthly-stock-report/monthly-stock-report.component.html
@@ -1,6 +1,6 @@
-<div class="card">
+<div class="card" >
     <div class="card-header text-center">
-      <h3>Monthly Sales Report </h3>
+      <h3>Monthly Stock Report </h3>
     </div>
     <div class="card-body">
       <div class="row">
@@ -20,7 +20,7 @@
         </div>
         <div class="col-10">
   
-          <div class="card">
+          <div class="card" id="report">
             <div class="card-body">
               <div class="row">
                 <table class="table">
