--- a/src/app/Admin/components/add-admin/add-admin.component.html
+++ b/src/app/Admin/components/add-admin/add-admin.component.html
@@ -1,178 +1,121 @@
-import { FormBuilder, FormGroup, Validators } from '@angular/forms';
-import { ActivatedRoute, Router } from '@angular/router';
-import { AdminService } from 'src/app/services/admin/admin.service';
-import { UserService } from 'src/app/services/user/user.service';
-import Swal from 'sweetalert2';
+<div class="card">
+  <div class="card-header text-center">
+    <h3>{{adminId==0?'Add Admin':'View Admin Detail '}} </h3>
+  </div>
+  <span style="float: right;">
+    <h3><countdown #cd [config]="config" (event)="handleEvent($event)"></countdown></h3>
+  </span>
+  <div class="card-body">
 
-declare var $:any;
-@Component({
-  selector: 'app-add-admin',
-  templateUrl: './add-admin.component.html',
-  styleUrls: ['./add-admin.component.css']
-})
-export class AddAdminComponent implements OnInit {
+    <div class="row">
+      <div class="card">
+        <div class="card-header">
+          <h5>Profile details</h5>
+        </div>
+        <div class="card-body">
+          <form [formGroup]="profileDetailForm">
+            <div class="row form-group">
+              <div class="col-lg-6 col-md-4 col-sm-8 col-12">
+                <label>Username:</label>
+                <input type="text" class="form-control" formControlName="userName" placeholder="username">
+              </div>
+            </div>
+            <div class="row form-group">
+              <div class="col-lg-6 col-md-4 col-sm-8 col-12">
+                <label>Password:</label>
+                <input type="password" class="form-control" formControlName="password" placeholder="username">
+              </div>
+            </div>
+            <div class="row form-group">
+              <div class="col-lg-6 col-md-4 col-sm-8 col-12">
+                <label>Confirm Password:</label>
+                <input type="password" class="form-control" formControlName="confirmPassword" placeholder="username">
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
 
-  constructor(
-    private fromBuilder: FormBuilder,
-    private route: ActivatedRoute,
-    private userService: UserService,
-    private adminService: AdminService,
-    private router: Router) {
+    <div class="row">
+      <div class="card">
+        <div class="card-header ">
+          <h5>Admin details</h5>
+        </div>
+        <div class="card-body">
+          <form [formGroup]="adminDetailForm">
+            <div class="row form-group">
+              <div class="col-lg-6 col-md-4 col-sm-8 col-12">
+                <label>User Type:</label>
+                <select name="" id="" class="form-control" formControlName="userTypeId">
+                  <option value="none">--Select User Type--</option>
+                  <option [value]="type.userTypeId" *ngFor="let type of userTypes">{{type.userTypeDescription}}</option>
+                </select>
+              </div>
+            </div>
+            <div class="row form-group">
+              <div class="col-lg-6 col-md-4 col-sm-8 col-12">
+                <label>Initials:</label>
+                <input type="text" class="form-control" placeholder="initials" formControlName="initials">
+              </div>
+            </div>
+            <div class="row form-group">
+              <div class="col-lg-6 col-md-4 col-sm-8 col-12">
+                <label>Surname:</label>
+                <input type="text" class="form-control" placeholder="surname" formControlName="surname">
+              </div>
+            </div>
+            <div class="row form-group">
+              <div class="col-lg-6 col-md-4 col-sm-8 col-12">
+                <label>Email Address:</label>
+                <input type="email" class="form-control" placeholder="email" formControlName="email">
+              </div>
+            </div>
+            <div class="row form-group">
+              <div class="col-lg-6 col-md-4 col-sm-8 col-12">
+                <label>ID Number:</label>
+                <input type="text" class="form-control" placeholder="Id number" formControlName="idNumber">
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
 
-    this.route.params.subscribe(param => {
-      this.adminId = param["id"];
-    });
-  }
+    <div class="row mt-5">
+      <div class="col-12">
+        <button type="button" class="btn btn-primary" style="float: right; margin-left: 5px;"
+        data-bs-toggle="modal" data-bs-target="#additionConfirmation">{{adminId==0?'Save':'Update'}}</button>
+        <button type="button" class="btn btn-secondary" style="float: right;" [routerLink]="'/admin/detail'" >Cancel</button>
+      </div>
+    </div>
+  </div>
+</div>
 
-  profileDetailForm: FormGroup;
-  adminDetailForm: FormGroup;
-
-  modalTitle:string="";
-  modalMessage:string="";
-
-  adminId: any;
-
-  userTypes: any[] = [];
-
-  adminData: any = {};
-
-  ngOnInit(): void {
-    this.initilizeForm();
-    this.getUserTypes();
-    if (this.adminId != 0)
-      this.getAdminById();
-
-      
-      
-  }
-
-  initilizeForm() {
-    this.profileDetailForm = this.fromBuilder.group({
-      userName: [null,Validators.required],
-      password: [null,Validators.required],
-      confirmPassword: [null,Validators.required]
-    });
-
-    this.adminDetailForm = this.fromBuilder.group({
-      initials: [null,Validators.required],
-      surname: [null,Validators.required],
-      userTypeId: [null,Validators.required],
-      idNumber: [null,Validators.required],
-      email: [null,Validators.required]
-    });
-  }
-
-  getUserTypes() {
-    this.userService.getUserTypes().subscribe(types => {
-      this.userTypes = types.userTypes;
-    });
-  }
-
-  getAdminById() {
-    this.adminService.getAdminById(this.adminId).subscribe(response => {
-      this.adminData = response.admin;
-
-      this.profileDetailForm.controls["userName"].patchValue(this.adminData.userName);
-      this.profileDetailForm.controls["password"].patchValue(this.adminData.password);
-      this.profileDetailForm.controls["confirmPassword"].patchValue(this.adminData.password);
-
-
-      this.adminDetailForm.controls["userTypeId"].patchValue(this.adminData.userTypeId);
-      this.adminDetailForm.controls["surname"].patchValue(this.adminData.surname);
-      this.adminDetailForm.controls["initials"].patchValue(this.adminData.initials);
-      this.adminDetailForm.controls["email"].patchValue(this.adminData.email);
-      this.adminDetailForm.controls["idNumber"].patchValue(this.adminData.idNumber);
-
-
-    });
-  }
+<app-dialog [dialogMessage]="modalMessage" [dialogTitle]="modalTitle" class="modal fade" id="dialogModal"
+  tabindex="-1" aria-labelledby="dialogModalLabel" aria-hidden="true">
+</app-dialog>
 
 
 
-  submitAddAdminForm() {
-    console.log(this.profileDetailForm.value);
-    console.log(this.adminDetailForm.value);
-    debugger
 
-    if (this.profileDetailForm.controls["password"].value != this.profileDetailForm.controls["confirmPassword"].value) 
-    {
+<!-- Admin Addition Confimation Model -->
+<div class="modal fade" id="additionConfirmation" tabindex="-1" aria-labelledby="additionConfirmationLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Admin Addition confirmation</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <p>Confirm Admin Addition</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+        <button type="button" class="btn btn-primary" data-bs-dismiss="modal" (click)="submitAddAdminForm()">Yes</button>
+      </div>
+    </div>
+  </div>
+</div>
 
-      console.log("password does not matched!");
-
-      Swal.fire({
-        title: 'Warning!',
-        text: 'Password did not Matched',
-        icon: 'info',
-        confirmButtonText: 'Ok'
-      })
-
-      return;
-    }
-    else if(this.profileDetailForm.invalid || this.adminDetailForm.invalid)
-    {
-      console.log("provide all the required fields values!");
-
-      Swal.fire({
-        title: 'Info!',
-        text: 'Provide All Required Fields',
-        icon: 'info',
-        confirmButtonText: 'Ok'
-      })
-
-      return;
-    }
-
-    let adminDetail =
-    {
-      "adminUserId":  Number(0),
-      "adminId": Number(this.adminId ?? 0),
-      "userName": String(this.profileDetailForm.controls["userName"].value),
-      "password":  String(this.profileDetailForm.controls["password"].value),
-      "userTypeId": Number(this.adminDetailForm.controls["userTypeId"].value ?? 0),
-      "initials":  String(this.adminDetailForm.controls["initials"].value),
-      "surname":  String(this.adminDetailForm.controls["surname"].value),
-      "email":  String(this.adminDetailForm.controls["email"].value),
-      "idNumber":  String(this.adminDetailForm.controls["idNumber"].value),
-      "cellNumber": String( "")
-    };
-    debugger
-    console.log(adminDetail)
-
-    this.adminService.addAdmin(adminDetail).subscribe(response => {
-      if (response.statusCode == 200) {
-
-        if(this.adminId==0)
-        {
-          console.log("admin added successfully!");
-          this.modalTitle="Success";
-          this.modalMessage="Admin Added Successfully!";
-          Swal.fire({
-            title: 'Success!',
-            text: 'Admin Added Successfully!',
-            icon: 'success',
-            confirmButtonText: 'Ok'
-          }).then(()=>{
-            this.router.navigateByUrl("/admin/detail");
-          })
-        }
-          else
-          {
-            Swal.fire({
-              title: 'Success!',
-              text: 'Admin Updated Successfully!',
-              icon: 'success',
-              confirmButtonText: 'Ok'
-            }).then(()=>{
-              this.router.navigateByUrl("/admin/detail");
-            })
-          }
-
-        
-      }
-    });
-
-    console.log(adminDetail);
-
-  }
-}
 
