--- a/src/app/Admin/Stock/wire-off-stock/wire-off-stock.component.html
+++ b/src/app/Admin/Stock/wire-off-stock/wire-off-stock.component.html
@@ -5,7 +5,7 @@
   <div class="col-8">
       <div class="card">
           <div  class="card-header text-center">
-            <h3>Wire Off Stock</h3>
+            <h3>Write Off Stock</h3>
           </div>
           <div class="card-body">
             
@@ -68,11 +68,11 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title">Stock Wire Off confirmation</h5>
+        <h5 class="modal-title">Stock Write Off confirmation</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <p>Confirm Stock Wire Off Addition</p>
+        <p>Confirm Stock Write Off Addition</p>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
