--- a/src/app/Admin/Stock/wire-off-stock/wire-off-stock.component.html
+++ b/src/app/Admin/Stock/wire-off-stock/wire-off-stock.component.html
@@ -51,7 +51,7 @@
       
               <div class="row mt-5">
                   <div class="col-12">
-                      <button type="button" class="btn btn-primary" style="float: right; margin-left: 5px;"data-bs-toggle="modal" data-bs-target="#additionConfirmation">{{stockId==0?'Save':'Wireoff'}}</button>
+                      <button type="button" class="btn btn-primary" style="float: right; margin-left: 5px;"data-bs-toggle="modal" data-bs-target="#additionConfirmation">{{stockId==0?'Save':'Writeoff'}}</button>
                       <button type="button" class="btn btn-secondary" style="float: right;" [routerLink]="'/admin/stock/detail'">Cancel</button>
                   </div>
               </div>
