Fix search added validation statement updated url

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -49,7 +49,7 @@
                           <li><a href="#" class="link-dark rounded" [routerLink]="'/admin/team/detail'">Teams</a></li>
                           <li><a href="#" class="link-dark rounded" [routerLink]="'/admin/team/attendanceHistory'">Team Attendance History</a></li>
                           <li><a href="#" class="link-dark rounded" [routerLink]="'/admin/orders/all'">Orders</a></li>
-                          <li><a [routerLink]="'/order/deliveryType/detail'" class="link-dark rounded">Deliivery Type</a></li>
+                          <li><a [routerLink]="'/order/deliveryType/detail'" class="link-dark rounded">Delivery Type</a></li>
                           <li><a href="#" class="link-dark rounded" [routerLink]="'/admin/location/detail'">Locations</a></li>
                           <li><a href="#" class="link-dark rounded" [routerLink]="'/admin/meeting/slot-detail'">slot Detail</a></li>
                           <li><a href="#" class="link-dark rounded" [routerLink]="'/admin/meeting/detail'">Booked Slots</a></li>
