--- a/src/app/product-sub-system/product-list/product-list.component.html
+++ b/src/app/product-sub-system/product-list/product-list.component.html
@@ -14,6 +14,7 @@
             <span class="input-group" style="float: right;">
                 <input type="text" class="form-control" placeholder="Product Name" aria-label="ProductName" aria-describedby="basic-addon1" [(ngModel)]="searchTerm">
                 <button type="button" class="btn btn-outline-primary" style="float: left;" (click)="searchByName()">Search</button>
+                <button type="button" class="btn btn-outline-primary" style="float: left;" (click)="getAllProducts()">View All</button>
             </span>
         </div>
         <div class="col-2">
