--- a/src/app/Admin/Audit/audit/audit.component.html
+++ b/src/app/Admin/Audit/audit/audit.component.html
@@ -3,6 +3,16 @@
     <div  class="card-header text-center">
       <h3>Audit Trail:</h3>
     </div>
+    <div class="row mt-5">
+      <div class="col-3"></div>
+      <div class="col-lg-4 col-md-3 col-sm-6 col-12">
+        <span class="input-group" style="float: right;">
+            <input type="text" class="form-control" placeholder="audits" aria-label="date" aria-describedby="basic-addon1" [(ngModel)]="searchTerm">
+            <button type="button" class="btn btn-outline-primary" style="float: left;"(click)="searchByName()" >Search</button>
+            <button type="button" class="btn btn-outline-primary" style="float: left;"(click)="getAuditDetail()" >View All</button>
+        </span>
+    </div>
+    </div>
     <div class="card-body">
       <div class="row mt-5 mb-5">
           <div class="col-2">
@@ -25,7 +35,7 @@
                           <tr *ngFor="let audit of auditData">
                             <td scope="row">{{audit.userName}}</td>
                             <td scope="row">{{audit.operation}}</td>
-                            <td scope="row">{{audit.date}}</td>
+                            <td scope="row">{{audit.date | date:'long'}}</td>
                           </tr>
                         </tbody>
                       </table>
