--- a/src/app/client-sub-system/Enquiries/add-enquiry/add-enquiry.component.html
+++ b/src/app/client-sub-system/Enquiries/add-enquiry/add-enquiry.component.html
@@ -1,7 +1,7 @@
 
 <div class="card">
     <div  class="card-header text-center">
-      <h3>Enquiry Type</h3>
+      <h3>Enquiries</h3>
     </div>
     <div class="card-body">
       
