--- a/src/app/Admin/components/add-admin/add-admin.component.html
+++ b/src/app/Admin/components/add-admin/add-admin.component.html
@@ -17,19 +17,19 @@
             <div class="row form-group">
               <div class="col-lg-6 col-md-4 col-sm-8 col-12">
                 <label>Username:</label>
-                <input type="text" class="form-control" formControlName="userName" placeholder="username">
+                <input type="text" class="form-control" formControlName="userName" placeholder="Username">
               </div>
             </div>
             <div class="row form-group">
               <div class="col-lg-6 col-md-4 col-sm-8 col-12">
                 <label>Password:</label>
-                <input type="password" class="form-control" formControlName="password" placeholder="username">
+                <input type="password" class="form-control" formControlName="password" placeholder="Password">
               </div>
             </div>
             <div class="row form-group">
               <div class="col-lg-6 col-md-4 col-sm-8 col-12">
                 <label>Confirm Password:</label>
-                <input type="password" class="form-control" formControlName="confirmPassword" placeholder="username">
+                <input type="password" class="form-control" formControlName="confirmPassword" placeholder="Confirm Password">
               </div>
             </div>
           </form>
@@ -56,25 +56,25 @@
             <div class="row form-group">
               <div class="col-lg-6 col-md-4 col-sm-8 col-12">
                 <label>Initials:</label>
-                <input type="text" class="form-control" placeholder="initials" formControlName="initials">
+                <input type="text" class="form-control" placeholder="Initials" formControlName="initials">
               </div>
             </div>
             <div class="row form-group">
               <div class="col-lg-6 col-md-4 col-sm-8 col-12">
                 <label>Surname:</label>
-                <input type="text" class="form-control" placeholder="surname" formControlName="surname">
+                <input type="text" class="form-control" placeholder="Surname" formControlName="surname">
               </div>
             </div>
             <div class="row form-group">
               <div class="col-lg-6 col-md-4 col-sm-8 col-12">
                 <label>Email Address:</label>
-                <input type="email" class="form-control" placeholder="email" formControlName="email">
+                <input type="email" class="form-control" placeholder="Email Address" formControlName="email">
               </div>
             </div>
             <div class="row form-group">
               <div class="col-lg-6 col-md-4 col-sm-8 col-12">
                 <label>ID Number:</label>
-                <input type="text" class="form-control" placeholder="Id number" formControlName="idNumber">
+                <input type="text" class="form-control" placeholder="Id Number" formControlName="idNumber">
               </div>
             </div>
           </form>
