--- a/src/app/Admin/components/admin-detail/admin-detail.component.html
+++ b/src/app/Admin/components/admin-detail/admin-detail.component.html
@@ -1,6 +1,6 @@
 <div class="card">
   <div class="card-header text-center">
-    <h3>Admin Detail</h3>
+    <h3>Admin Details</h3>
   </div>
   <div class="card-body">
     <div class="row">
@@ -30,7 +30,7 @@
               <table class="table">
                 <thead  style="background-color: rgb(103, 186, 241);">
                   <tr>
-                    <th scope="col">Initial</th>
+                    <th scope="col">Initials</th>
                     <th scope="col">Surname</th>
                     <th scope="col">Actions</th>
                   </tr>
