--- a/src/app/Admin/Client/client-list/client-list.component.html
+++ b/src/app/Admin/Client/client-list/client-list.component.html
@@ -12,7 +12,7 @@
         </div>
         <div class="col-lg-4 col-md-3 col-sm-6 col-12">
             <span class="input-group" style="float: right;">
-                <input type="text" class="form-control" placeholder="clientname" [(ngModel)]="searchTerm" aria-label="Username" aria-describedby="basic-addon1">
+                <input type="text" class="form-control" placeholder="Client Name" [(ngModel)]="searchTerm" aria-label="Username" aria-describedby="basic-addon1">
                 <button type="button" class="btn btn-outline-primary" style="float: left;"  (click)="searchByName()" >Search</button>
             </span>
         </div>
@@ -31,7 +31,7 @@
                     <table class="table">
                         <thead style="background-color: rgb(103, 186, 241);">
                           <tr>
-                            <th scope="col">Initial</th>
+                            <th scope="col">Initials</th>
                             <th scope="col">Surname</th>
                             <th scope="col">Actions</th>
                           </tr>
