--- a/src/app/product-sub-system/add-product-type/add-product-type.component.html
+++ b/src/app/product-sub-system/add-product-type/add-product-type.component.html
@@ -43,11 +43,15 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title">Product Type Addition confirmation</h5>
+          <h5 class="modal-title" *ngIf="productTypeId==0">Product Type Addition confirmation</h5>
+          <h5 class="modal-title" *ngIf="productTypeId!=0">Product Type Edit confirmation</h5>
+
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-          <p>Confirm Product Type Addition</p>
+          <p *ngIf="productTypeId==0">Confirm Product Type Addition</p>
+          <p *ngIf="productTypeId!=0">Confirm Product Type Edit</p>
+
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
