--- a/src/app/product-sub-system/product-list/product-list.component.html
+++ b/src/app/product-sub-system/product-list/product-list.component.html
@@ -1,85 +1,85 @@
 
 <div class="card">
-    <div  class="card-header text-center">
-      <h3>Products</h3>
-    </div>
-    <div class="card-body">
-      <div class="row">
-          <div class="col-2">
-          </div>
-        <div class="col-lg-4 col-md-3 col-sm-2 col-12 "> 
-            <button type="button" class="btn btn-primary" style="float: left;width: 8rem;" [routerLink]="'/admin/product/add/0'" >Add</button>
-        </div>
-        <div class="col-lg-4 col-md-3 col-sm-6 col-12">
-            <span class="input-group" style="float: right;">
-                <input type="text" class="form-control" placeholder="Product Name" aria-label="ProductName" aria-describedby="basic-addon1" [(ngModel)]="searchTerm">
-                <button type="button" class="btn btn-outline-primary" style="float: left;" (click)="searchByName()">Search</button>
-                <button type="button" class="btn btn-outline-primary" style="float: left;" (click)="getAllProducts()">View All</button>
-            </span>
-        </div>
+  <div  class="card-header text-center">
+    <h3>Products</h3>
+  </div>
+  <div class="card-body">
+    <div class="row">
         <div class="col-2">
         </div>
+      <div class="col-lg-4 col-md-3 col-sm-2 col-12 "> 
+          <button type="button" class="btn btn-primary" style="float: left;width: 8rem;" [routerLink]="'/admin/product/add/0'" >Add</button>
       </div>
-      <div class="row mt-5 mb-5">
-          <div class="col-2">
+      <div class="col-lg-4 col-md-3 col-sm-6 col-12">
+          <span class="input-group" style="float: right;">
+              <input type="text" class="form-control" placeholder="Product Name" aria-label="ProductName" aria-describedby="basic-addon1" [(ngModel)]="searchTerm">
+              <button type="button" class="btn btn-outline-primary" style="float: left;" (click)="searchByName()">Search</button>
+              <button type="button" class="btn btn-outline-primary" style="float: left;" (click)="getAllProducts()">View All</button>
+          </span>
+      </div>
+      <div class="col-2">
+      </div>
+    </div>
+    <div class="row mt-5 mb-5">
+        <div class="col-2">
 
-          </div>
-        <div class="col-8">
-            
-            <div class="card">
-                <div class="card-body">
-                  <div class="row">
-                    <table class="table">
-                        <thead  style="background-color: rgb(103, 186, 241);">
-                          <tr>
-                            <th scope="col">Product Name</th>
-                            <th scope="col">Category</th>
-                            <th scope="col">Size</th>
-                            <th scope="col">Price</th>
-                            <th scope="col">Actions</th>
-                          </tr>
-                        </thead>
-                        <tbody>
-                          <tr *ngFor="let product of productData">
-                            <td scope="row">{{product.productName}}</td>
-                            <td scope="row">{{product.productTypeName}}</td>
-                            <td scope="row">{{product.productSizeDescription}}</td>
-                            <td scope="row">{{product.price}}</td>
-                            <td scope="row">
-                                <button class="btn btn-outline-primary" (click)="editProduct(product)">View</button>
-                                <button class="btn btn-outline-primary"  data-bs-toggle="modal" data-bs-target="#deletionConfirmation" (click)="deleteProduct(product)">Delete</button>
-                            </td>
-                          </tr>
-                        </tbody>
-                      </table>
-                  </div>
+        </div>
+      <div class="col-8">
+          
+          <div class="card">
+              <div class="card-body">
+                <div class="row">
+                  <table class="table">
+                      <thead  style="background-color: rgb(103, 186, 241);">
+                        <tr>
+                          <th scope="col">Product Name</th>
+                          <th scope="col">Category</th>
+                          <th scope="col">Size</th>
+                          <th scope="col">Price(R)</th>
+                          <th scope="col">Actions</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <tr *ngFor="let product of productData">
+                          <td scope="row">{{product.productName}}</td>
+                          <td scope="row">{{product.productTypeName}}</td>
+                          <td scope="row">{{product.productSizeDescription}}</td>
+                          <td scope="row"> R{{product.price | number:'.1-3'}}</td>
+                          <td scope="row">
+                              <button class="btn btn-outline-primary" (click)="editProduct(product)">View</button>
+                              <button class="btn btn-outline-primary"  data-bs-toggle="modal" data-bs-target="#deletionConfirmation" (click)="deleteProduct(product)">Delete</button>
+                          </td>
+                        </tr>
+                      </tbody>
+                    </table>
                 </div>
               </div>
-
-        </div>
-        <div class="col-2">
-
-        </div>
+            </div>
 
       </div>
+      <div class="col-2">
+
+      </div>
+
     </div>
   </div>
+</div>
 
-    <!-- Admin Deletion Confimation Model -->
+  <!-- Admin Deletion Confimation Model -->
 <div class="modal fade" id="deletionConfirmation" tabindex="-1" aria-labelledby="deletionConfirmationLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title">Product Deletion confirmation</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        <p>Confirm Product Deletion</p>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-        <button type="button" class="btn btn-primary" data-bs-dismiss="modal" (click)="confirmDeleteion()">Yes</button>
-      </div>
+<div class="modal-dialog">
+  <div class="modal-content">
+    <div class="modal-header">
+      <h5 class="modal-title">Product Deletion confirmation</h5>
+      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+    </div>
+    <div class="modal-body">
+      <p>Confirm Product Deletion</p>
+    </div>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+      <button type="button" class="btn btn-primary" data-bs-dismiss="modal" (click)="confirmDeleteion()">Yes</button>
     </div>
   </div>
+</div>
 </div>
