edited add emp comp html

--- a/src/app/Employee/add-employee/add-employee.component.html
+++ b/src/app/Employee/add-employee/add-employee.component.html
@@ -55,7 +55,7 @@
             </div>
             <div class="row form-group">
               <div class="col-lg-6 col-md-4 col-sm-8 col-12">
-                <label>Initials:</label>
+                <label>Name:</label>
                 <input type="text" class="form-control" formControlName="initials" placeholder="initials">
               </div>
             </div>
