--- a/src/app/Employee/employee-detail/employee-detail.component.html
+++ b/src/app/Employee/employee-detail/employee-detail.component.html
@@ -30,7 +30,7 @@
                   <table class="table">
                       <thead style="background-color: rgb(103, 186, 241);">
                         <tr>
-                          <th scope="col">Initial</th>
+                          <th scope="col">Name</th>
                           <th scope="col">Surname</th>
                           <th scope="col">Actions</th>
                         </tr>
