edited emp profile html

--- a/src/app/employee-sub-system/employee-profile/employee-profile.component.html
+++ b/src/app/employee-sub-system/employee-profile/employee-profile.component.html
@@ -12,7 +12,7 @@
 
           <div class="row form-group">
             <div class="col-lg-6 col-md-4 col-sm-8 col-12">
-                <h5 >Initials: <span><b>{{employeeData?.initials}}</b></span></h5>
+                <h5 >Name: <span><b>{{employeeData?.initials}}</b></span></h5>
             </div>
           </div>
           <div class="row form-group">
