edited update emp profile html

--- a/src/app/employee-sub-system/update-employee-profile/update-employee-profile.component.html
+++ b/src/app/employee-sub-system/update-employee-profile/update-employee-profile.component.html
@@ -7,7 +7,7 @@
                     <form action="">
                         <div class="row form-group">
                           <div class="col-lg-6 col-md-4 col-sm-8 col-12">
-                              <label >Initials:</label>
+                              <label >Name:</label>
                               <input type="text" class="form-control" placeholder="initials">
                           </div>
                         </div>
